--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
+    "normalize.css": "^6.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
