--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-eslint": "^7.2.0",
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.2.2",
+    "babel-preset-es2015-webpack": "^6.4.3",
     "babel-preset-react": "^6.23.0",
     "css-loader": "^0.27.3",
     "duplicate-package-checker-webpack-plugin": "^1.2.4",
@@ -31,6 +32,8 @@
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
+    "axios": "^0.16.0",
+    "babel-preset-stage-1": "^6.24.1",
     "normalize.css": "^6.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
