--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
     "postcss": "^5.2.16",
+    "postcss-autoreset": "^1.2.1",
     "postcss-cssnext": "^2.10.0",
     "postcss-import": "^9.1.0",
     "postcss-loader": "^1.3.3",
-    "precss": "^1.4.0",
     "react-css-modules": "^4.1.0",
     "rimraf": "^2.6.1",
     "style-loader": "^0.15.0",
