--- a/package.json
+++ b/package.json
@@ -12,37 +12,41 @@
   "author": "Hector Coto",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^6.7.7",
-    "babel-core": "^6.24.0",
-    "babel-eslint": "^7.2.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-env": "^1.2.2",
+    "autoprefixer": "^7.1.2",
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015-webpack": "^6.4.3",
-    "babel-preset-react": "^6.23.0",
-    "css-loader": "^0.27.3",
-    "duplicate-package-checker-webpack-plugin": "^1.2.4",
-    "eslint": "^3.18.0",
-    "eslint-plugin-react": "^6.10.3",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "html-webpack-plugin": "^2.28.0",
-    "postcss": "^5.2.16",
-    "postcss-cssnext": "^2.10.0",
-    "postcss-import": "^9.1.0",
-    "postcss-loader": "^1.3.3",
-    "react-css-modules": "^4.1.0",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.4",
+    "duplicate-package-checker-webpack-plugin": "^1.2.5",
+    "eslint": "^4.2.0",
+    "eslint-plugin-react": "^7.1.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^2.29.0",
+    "postcss": "^6.0.6",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^10.0.0",
+    "postcss-loader": "^2.0.6",
+    "react-css-modules": "^4.5.2",
+    "react-router-dom": "^4.1.1",
     "rimraf": "^2.6.1",
-    "style-loader": "^0.15.0",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.2"
+    "style-loader": "^0.18.2",
+    "webpack": "^3.2.0",
+    "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
-    "axios": "^0.16.0",
+    "axios": "^0.16.2",
     "babel-preset-stage-1": "^6.24.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.3",
-    "react-router": "^3.0.0",
-    "redux": "^3.6.0",
+    "history": "^4.6.3",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   }
 }
