--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "axios": "^0.16.2",
     "babel-preset-stage-1": "^6.24.1",
     "history": "^4.6.3",
+    "normalize.css": "^7.0.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
