--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^4.2.0",
     "eslint-plugin-react": "^7.1.0",
     "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
     "postcss": "^6.0.6",
     "postcss-cssnext": "^3.0.2",
@@ -33,6 +34,7 @@
     "react-router-dom": "^4.1.1",
     "rimraf": "^2.6.1",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.2.0",
     "webpack-dev-server": "^2.5.1"
   },
